Added API area devices service
